--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,23 @@
           document.getElementById("load").innerHTML =
             "Error loading the Firebase SDK, check the console.";
         }
+        const messaging = firebase.messaging();
+        messaging
+          .requestPermission()
+          .then(() => {
+            console.log("have permission");
+            return messaging.getToken();
+          })
+          .then((token) => {
+            console.log(token);
+          })
+          .catch((err) => {
+            console.log(err);
+          });
+
+        messaging.onMessage((payload) => {
+          console.log("onMessage: ", payload);
+        });
       });
     </script>
   </body>
