--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,24 @@
     <title>Welcome to Firebase Hosting</title>
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.18.0/firebase-app.js"></script>
+    <!-- <script defer src="/__/firebase/7.18.0/firebase-app.js"></script> -->
     <!-- include only the Firebase features as you need -->
     <!-- <script defer src="/__/firebase/7.18.0/firebase-auth.js"></script> -->
     <!-- <script defer src="/__/firebase/7.18.0/firebase-database.js"></script> -->
-    <script defer src="/__/firebase/7.18.0/firebase-messaging.js"></script>
+    <!-- <script defer src="/__/firebase/7.18.0/firebase-messaging.js"></script> -->
     <!-- <script defer src="/__/firebase/7.18.0/firebase-storage.js"></script> -->
     <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+    <!-- <script defer src="/__/firebase/init.js"></script> -->
+
+    <!-- on nginx -->
+    <script
+      defer
+      src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"
+    ></script>
+    <script
+      defer
+      src="https://www.gstatic.com/firebasejs/7.18.0/firebase-messaging.js"
+    ></script>
 
     <style media="screen">
       body {
@@ -104,6 +114,20 @@
         // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
         //
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+
+        // on nginx START
+        const firebaseConfig = {
+          apiKey: "AIzaSyA86WJrFqUvhHTY5HzyRa5skG8tjIKS78Q",
+          authDomain: "test-worker-332ee.firebaseapp.com",
+          databaseURL: "https://test-worker-332ee.firebaseio.com",
+          projectId: "test-worker-332ee",
+          storageBucket: "test-worker-332ee.appspot.com",
+          messagingSenderId: "903310641948",
+          appId: "1:903310641948:web:339d4aa583b51049b748d9",
+        };
+        firebase.initializeApp(firebaseConfig);
+        // const messaging = firebase.messaging();
+        // on nginx END
 
         try {
           let app = firebase.app();
